Reverted back to box-sizing: border-box which fixed the css alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-g* {
+* {
   box-sizing: border-box;
 }
 body {
@@ -27,7 +27,7 @@ code {
 /* Will justify the logo, search bar and profile icon. Don't forget to make the search bar a 
 specific proportion once it comes down to it */
 .search-bar {
-  width: 50%
+  width: 600px;
 }
 /* Navigation Bar Styling */
 nav  {
@@ -40,9 +40,7 @@ nav  {
   z-index: 1;
 }
 nav .img-container {
-  max-height: 100%;
-  width: 120px;
-  margin: 10px
+  width: 122px;
 }
 
 nav .img-container .user-icon-img {
@@ -50,8 +48,8 @@ nav .img-container .user-icon-img {
 }
 
 nav img {
-  max-width: 100%;
-  max-height: 100%;
+  height: 55px;
+  padding: 10px;
 }
 
 nav form {
@@ -106,12 +104,8 @@ nav button {
 }
 .filter-bar {
   min-width: 600px;
-  margin: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 10px;
-  padding-top: 10px;
   background-color: white;
+  padding: 10px;
   color: black;
   border-radius: 5px;
   border: 1px solid #c8c6c6;
@@ -120,8 +114,7 @@ nav button {
   text-decoration: none;
   display: flex;
   justify-content: space-evenly;
-  margin-top: 20px;
-  margin-bottom: 10px;
+  margin: 20px;
 }
 
 /* Button and Drop Down Menu Styling */
@@ -181,7 +174,7 @@ a:active.post {
 .post {
   background-color: white;
   height: auto;
-  min-width: 600px;
+  width: 600px;
   margin: 10px;
   padding-left: 20px;
   padding-right: 20px;
